fix align problem

--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ body {
   font-size: 18px;
   line-height: 28px;
   outline: none;
+  text-align: center;
 }
 /* end of donate-today area */
 
